<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="16dp"
    tools:context=".Cubo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/cubo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="@string/cubo"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="231dp"
                tools:layout_editor_absoluteY="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="52dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_weight="1"
                android:text="@string/valorArista"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtArista"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="120dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cubo"
                android:text="@string/calcular" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borrar1"
                android:text="@string/borrar" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
